guacamoleb: Update maintainers info * Just the way I like it

--- a/overlay-krypton/packages/apps/Settings/res/values/strings.xml
+++ b/overlay-krypton/packages/apps/Settings/res/values/strings.xml
@@ -16,5 +16,5 @@
 
 <resources>
     <!-- Device maintainer -->
-    <string name="device_maintainer_name">Harish</string>
+    <string name="device_maintainer_name">H A R I S H</string>
 </resources>
